fix z-index

--- a/src/assets/styles/blocks/auth.scss
+++ b/src/assets/styles/blocks/auth.scss
@@ -15,6 +15,7 @@
   transform: translate(-50%, -50%);
   backface-visibility: hidden;
   transition: transform .5s ease;
+  z-index: 2;
 }
 
 .auth__title {
